<resources>
    <string name="app_name">BiShe</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="input_hint">亲爱的跟我聊天吧</string>

    <string-array name="welcome_tips">
        <item>你好！我是小白，你的私人生活助手！</item>
        <item>好久不见，是不是去拯救世界啦？</item>
        <item>终于等到你，小白好想你呢！</item>
        <item>世界那么大，我们还是相遇了呢！</item>
        <item>路途那么遥远，让小白陪你一起走吧！</item>
        <item>你好！我是大白的妹妹小白，你的私人生活助手！</item>
    </string-array>

    <string name="top">头条</string>
    <string name="nba">NBA</string>
    <string name="cars">汽车</string>
    <string name="jokes">笑话</string>



    <string name="class_course">课程名称</string>
    <string name="class_teacher">教师</string>
    <string name="class_place">地点</string>

    <string name="monday">星期一</string>
    <string name="tuesday">星期二</string>
    <string name="wednesday">星期三</string>
    <string name="thursday">星期四</string>
    <string name="friday">星期五</string>
    <string name="saturday">星期六</string>
    <string name="sunday">星期日</string>
    <string name="main_title">微课表</string>
    <string name="str_addClass">确认修改</string>


    <string name="NetConnectFailed">噢，好像没能连接上网络，要不你检查一下 </string>
    <string name="Servefailed">抱歉，好像没能连接上网络，或者是服务器出了点小问题 </string>



    <string name="pushmsg_center_no_more_msg">已经到底啦</string>
    <string name="pushmsg_center_pull_up_text">松开加载更多</string>
    <string name="pushmsg_center_pull_down_text">下拉可以刷新</string>
    <string name="pushmsg_center_pull_release_text">松开获取更多</string>
    <string name="pushmsg_center_pull_down_update_time">上次刷新时间 : </string>
    <string name="pushmsg_center_load_more_ongoing_text">正在加载中</string>
    <string name="xsearch_loading">正在刷新…</string>

    <!-- 加载图片失败时的提示文本 -->
    <string name="picture_load_image_failed">点击屏幕，重新加载</string>
    <!-- 加载中提示 -->
    <string name="picture_image_loading">正在加载…</string>

    <!-- 下拉刷新和上拉加载更多的文本 -->
    <string name="pull_to_refresh_header_hint_normal">@string/pushmsg_center_pull_down_text</string>
    <string name="pull_to_refresh_header_hint_normal2">上拉可以刷新</string>
    <string name="pull_to_refresh_header_hint_ready">松开后刷新</string>
    <string name="pull_to_refresh_header_hint_loading">@string/pushmsg_center_load_more_ongoing_text</string>
    <string name="pull_to_refresh_header_last_time">@string/pushmsg_center_pull_down_update_time</string>
    <string name="pull_to_refresh_footer_hint_ready">松开载入更多</string>
    <string name="pull_to_refresh_refreshing_label">@string/pull_to_refresh_header_hint_loading</string>
    <string name="pull_to_refresh_no_more_data">@string/pushmsg_center_no_more_msg</string>
    <string name="pull_to_refresh_network_error">网络不给力，请检查网络</string>

    <string name="title_activity_bai_du">BaiDuActivity</string>

</resources>
